--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>G's Donut Diner</title>
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>G's Donut Diner</h1>
+    </header>
+    <main>
+        <h2>Store Hours</h2>
+        <ul>
+            <li><strong>Monday: </strong>11am-2pm</li>
+            <li><strong>Tuesday: </strong>11am-2pm</li>
+            <li><strong>Wednesday: </strong>11am-2pm</li>
+            <li><strong>Thursday: </strong>11am-2pm</li>
+            <li><strong>Friday: </strong>11am-2pm</li>
+            <li><strong>Saturday: </strong>11am-2pm</li>
+            <li><strong>Sunday: </strong>11am-2pm</li>
+        </ul>
+
+        <h3>
+            About Us
+        </h3>
+        <p>
+            Welcome to G's Donut Diner! We are a family owned business based out of Nashville, TN. 
+        </p>
+
+        <section class="box-container">
+            <div class="box"></div>
+            <div class="box"></div>
+        </section>
+            
+    </main>
+    <footer></footer>
+  </body>
 </html>
