added in menu items and boxes with sales html.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
         </p>
 
         <section class="box-container">
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box"><h3>Menu</h3>
+                <ul>
+                    <li>Glazed Dip "We're sure you can't eat just one!"</li>
+                    <li>Red Velvet</li>
+                    <li>Life with Lemon</li>
+                    <li>Cookie Dough</li>
+                    <li>Birthday Cake</li>
+                </ul>
+            </div>
+            <div class="box"><h3>Contact Us</h3>
+                <p>
+                contact@donutdiner.com
+                </p>
+            </div>
         </section>
             
     </main>
