--- a/sales.html
+++ b/sales.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sales Page</title>
+  </head>
+  <body>
     <header>
-        
+      <h1>Sales Data</h1>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div id="Seattle"></div>
+        <div id="Tokyo"></div>
+        <div id="Dubai"></div>
+        <div id="Paris"></div>
+        <div id="Lima"></div>
+      </section>
+    </main>
     <footer></footer>
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
