completed for loop for sales info

--- a/sales.html
+++ b/sales.html
@@ -11,12 +11,7 @@
       <h1>Sales Data</h1>
     </header>
     <main>
-      <section>
-        <div id="Seattle"></div>
-        <div id="Tokyo"></div>
-        <div id="Dubai"></div>
-        <div id="Paris"></div>
-        <div id="Lima"></div>
+      <section id="sales">
       </section>
     </main>
     <footer></footer>
