--- a/index.html
+++ b/index.html
@@ -11,42 +11,59 @@
     <header>
       <h1>G's Donut Diner</h1>
     </header>
+    <img
+      src="images/madalyn-cox-aWQjHrCi_c4-unsplash.jpg"
+      atl="4 donuts"
+      height="350px"
+      width="350px"
+    />
     <main>
-        <h2>Store Hours</h2>
-        <ul>
-            <li><strong>Monday: </strong>11am-2pm</li>
-            <li><strong>Tuesday: </strong>11am-2pm</li>
-            <li><strong>Wednesday: </strong>11am-2pm</li>
-            <li><strong>Thursday: </strong>11am-2pm</li>
-            <li><strong>Friday: </strong>11am-2pm</li>
-            <li><strong>Saturday: </strong>11am-2pm</li>
-            <li><strong>Sunday: </strong>11am-2pm</li>
-        </ul>
+      <h2>Store Hours</h2>
+      <ul>
+        <li><strong>Monday: </strong>11am-2pm</li>
+        <li><strong>Tuesday: </strong>11am-2pm</li>
+        <li><strong>Wednesday: </strong>11am-2pm</li>
+        <li><strong>Thursday: </strong>11am-2pm</li>
+        <li><strong>Friday: </strong>11am-2pm</li>
+        <li><strong>Saturday: </strong>11am-2pm</li>
+        <li><strong>Sunday: </strong>11am-2pm</li>
+      </ul>
 
-        <h3>
-            About Us
-        </h3>
-        <p>
-            Welcome to G's Donut Diner! We are a family owned business based out of Nashville, TN. 
-        </p>
+      <h3>About Us</h3>
+      <p>
+        Welcome to G's Donut Diner! We are a locally-owned business based out of
+        Nashville, TN.
+      </p>
 
-        <section class="box-container">
-            <div class="box"><h3>Menu</h3>
-                <ul>
-                    <li>Glazed Dip "We're sure you can't eat just one!"</li>
-                    <li>Red Velvet</li>
-                    <li>Life with Lemon</li>
-                    <li>Cookie Dough</li>
-                    <li>Birthday Cake</li>
-                </ul>
-            </div>
-            <div class="box"><h3>Contact Us</h3>
-                <p>
-                contact@donutdiner.com
-                </p>
-            </div>
-        </section>
-            
+      <section class="box-container">
+        <div class="box">
+          <h3>Menu</h3>
+          <ul>
+            <li>Glazed Dips "We're sure you can't eat just one!"</li>
+            <li>Red Velvet</li>
+            <li>Life with Lemon</li>
+            <li>Cookie Dough</li>
+            <li>Birthday Cake</li>
+          </ul>
+        </div>
+        <div class="box">
+          <h3>Locations</h3>
+          <ul>
+            <li>Nashville,TN</li>
+            <li>Murfreesboro,TN</li>
+            <li>Brentwood,TN</li>
+            <li>Smyrna,TN</li>
+          </ul>
+        </div>
+        <div class="box">
+          <h3>Contact Us</h3>
+          <p>
+            615-EAT-DNTS
+            <br />
+            contact@donutdiner.com
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
