--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       atl="4 donuts"
       height="350px"
       width="350px"
+      class="center"
     />
     <main>
       <h2>Store Hours</h2>
