made new changes to js css and html

--- a/cookie-dough.html
+++ b/cookie-dough.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Cookie Dough</h1>
     <p>Welcome to the Cookie Dough page!</p>
-    <script src="cookie-dough.js"></script>
+    <script src="js/cookie-dough.js"></script>
 </body>
 </html>
