--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G's Donut Diner</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="js/cookie-dough.js" />
   </head>
   <body>
     <header>
