change in index and js

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G's Donut Diner</title>
     <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="stylesheet" href="js/cookie-dough.js" />
   </head>
   <body>
     <header>
       <h1>G's Donut Diner</h1>
+      <a href="sales.html">Sales Page</a>
     </header>
     <img
       src="images/madalyn-cox-aWQjHrCi_c4-unsplash.jpg"
