changes on js and sales html

--- a/sales.html
+++ b/sales.html
@@ -11,10 +11,22 @@
       <h1>Sales Data</h1>
     </header>
     <main>
-      <section id="sales">
-      </section>
+      <section id="sales"></section>
     </main>
-    <footer></footer>
+    <footer>
+      <table>
+        <tr>
+          <th></th>
+          <th scope="row">Tokyo</th>
+          <th scope="col">11am</th>
+          <th scope="col">12pm</th>
+          <th scope="col">1pm</th>
+          <th scope="col">2pm</th>
+
+          <td></td>
+        </tr>
+      </table>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
