adding table to stand

--- a/sales.html
+++ b/sales.html
@@ -14,16 +14,39 @@
       <section id="sales"></section>
     </main>
     <footer>
-      <table>
+      <table
+        border="2"
+        bgcolor="#efefef"
+        width="400"
+        cellpadding="10"
+        cellspacing="5"
+      >
         <tr>
           <th></th>
-          <th scope="row">Tokyo</th>
-          <th scope="col">11am</th>
-          <th scope="col">12pm</th>
-          <th scope="col">1pm</th>
-          <th scope="col">2pm</th>
-
-          <td></td>
+          <th width="50">11am</th>
+          <th width="50">12pm</th>
+          <th width="50">1pm</th>
+          <th width="50">2pm</th>
+        </tr>
+        <tr>
+          <th>Seattle:</th>
+          <td colspan="1"></td>
+        </tr>
+        <tr>
+          <th>Tokyo:</th>
+          <td colspan="1"></td>
+        </tr>
+        <tr>
+          <th>Dubai:</th>
+          <td colspan="1"></td>
+        </tr>
+        <tr>
+          <th>Paris:</th>
+          <td colspan="1"></td>
+        </tr>
+        <tr>
+          <th>Lima:</th>
+          <td colspan="1"></td>
         </tr>
       </table>
     </footer>
