--- a/sales.html
+++ b/sales.html
@@ -17,35 +17,56 @@
       <table
         border="2"
         bgcolor="#efefef"
-        width="400"
-        cellpadding="10"
-        cellspacing="5"
+        width="600"
+        cellpadding="6"
+        cellspacing="6"
       >
         <tr>
           <th></th>
-          <th width="50">11am</th>
-          <th width="50">12pm</th>
-          <th width="50">1pm</th>
-          <th width="50">2pm</th>
+          <th width="90">11am</th>
+          <th width="90">12pm</th>
+          <th width="90">1pm</th>
+          <th width="90">2pm</th>
+          <th width="90">Daily Location Total</th>
         </tr>
         <tr>
           <th>Seattle:</th>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
           <td colspan="1"></td>
         </tr>
         <tr>
           <th>Tokyo:</th>
           <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
         </tr>
         <tr>
           <th>Dubai:</th>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
           <td colspan="1"></td>
         </tr>
         <tr>
           <th>Paris:</th>
           <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
         </tr>
         <tr>
           <th>Lima:</th>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
+          <td colspan="1"></td>
           <td colspan="1"></td>
         </tr>
       </table>
