--- a/sales.html
+++ b/sales.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sales Page</title>
-  </head>
-  <body>
-    <header>
+ 
       <h1>Sales Data</h1>
+      <div id="table-container"></div>
     </header>
     <main>
       <section id="sales"></section>
     </main>
-    <footer>
       <table
         border="2"
         bgcolor="#efefef"
@@ -70,7 +68,10 @@
           <td colspan="1"></td>
         </tr>
       </table>
-    </footer>
     <script src="js/script.js"></script>
+    <script>
+      const tableContainer = document.getElementById("table-container");
+      tableContainer.appendChild(table);
+    </script>
   </body>
 </html>
