--- a/sales.html
+++ b/sales.html
@@ -5,26 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sales Page</title>
- <link href="style.css" rel="stylesheet" type="text/css" />
-     </head>
-     <body>
-
-
-      
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <main>
-
       <h1>Sales Data</h1>
 
-
-      <table 
-      border= 1
-        id="sales-table">
+      <table border="2" id="sales-table">
         <tr id="heading-row">
           <th></th>
         </tr>
-
       </table>
-
     </main>
     <script src="js/script.js"></script>
   </body>
