major changes to table and adding form

--- a/sales.html
+++ b/sales.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sales Page</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <main>
+    <header>
       <h1>Sales Data</h1>
-
-      <table border="2" id="sales-table">
+    </header>
+    <main>
+      <table id="sales-table">
         <tr id="heading-row">
+          <tr>
           <th></th>
+          <th>11pm</th>
+          <th>12pm</th>
+          <th>1pm</th>
+          <th>2pm</th>
+          <th>Daily Location Total</th>
+        </tr>
+        <tr>
+          <td>Seattle</td>                        
+          <td>Tokyo</td>
+          <td>Dubai</td>
+          <td>Paris</td>
+          <td>Lima</td>
+        </tr>
+        <tr>
+          <td>name</td>
+          <td>minCust</td>
+          <td>maxCust</td>
+          <th>avgCookiesPerSale</th>
         </tr>
       </table>
+      <section id="Sales"></section>
     </main>
+       <footer>
+       </footer>
+     
+   
     <script src="js/script.js"></script>
   </body>
 </html>
