--- a/form.html
+++ b/form.html
@@ -10,26 +10,20 @@
     <h1>Change Location</h1>
 
     <form id="user-form">
-    <label for="locationName"> Location Name </label>
-    <input type="text" id="locationName" name="locationName" />
+      <label for="locationName"> Location Name </label>
+      <input type="text" id="locationName" name="locationName" />
 
-    <label for="address"> Street Address </label>
-    <input type="text" id="address" name="address" />
+      <label for="address"> Street Address </label>
+      <input type="text" id="address" name="address" />
 
-    <label for="phoneNumber"> Phone Number </label>
-    <input type="text" id="phoneNumber" name="phoneNumber" />
+      <label for="phoneNumber"> Phone Number </label>
+      <input type="text" id="phoneNumber" name="phoneNumber" />
 
-    <button type="submit">Submit</button>
+      <button type="submit">Submit</button>
     </form>
 
-    <section id="results">
+    <section id="results"></section>
 
-    
-    </section>
-
-    <script src="./js/script.js">
-
-    </script>
-
+    <script src="./js/script.js"></script>
   </body>
 </html>
